fix: spacing (again)

--- a/assets/style/global.css
+++ b/assets/style/global.css
@@ -86,13 +86,13 @@ button:hover {
 .col-idk {
   float: left;
   width: 20%;
-  margin-left: 5%;
+  margin-left: 6%;
   margin-top: 6px;
 }
 
 .col-idk2 {
   float: left;
-  margin-left: 5%;
+  margin-left: 6%;
   margin-top: 6px;
 }
 
